--- a/taubyte/config.yaml
+++ b/taubyte/config.yaml
@@ -1,6 +1,6 @@
 version: 1.00
 enviroment: 
-  image: taubyte/builder-go:test2
+  image: taftaf/builder-go:test2
   variables:
 workflow:
     - test
